--- a/_config.yml
+++ b/_config.yml
@@ -21,14 +21,15 @@ description: >
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
+url: "https://madoreenu.github.io" # the base hostname & protocol for your site
 cover: "/assets/header_image.jpg"
 logo: "/assets/logo.png"
+permalink: "/:year/:month/:day/:title"
 
 # Build settings
 markdown: kramdown
 inter_post_navigation: false
-highlightjs_theme: "monokai-sublime"
+highlightjs_theme: "zenburn""
 
 # Pagination Settings
 # https://github.com/sverrirs/jekyll-paginate-v2/blob/master/README-GENERATOR.md#site-configuration
