サイト名の変更、いい感じのフォント

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ exclude:
 
 # Site settings
 paginate: 5
-title: mado's diary
+title: Go for IT!
 subtitle: "まどれーぬのブログです"
 email: madoreenu314@gmail.com
 name: madoreenu
