--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,7 @@ subtitle: "まどれーぬのブログです"
 email: madoreenu314@gmail.com
 name: madoreenu
 description: >
-  Hi, I'm Madoreenu.
-  I really like to learn something new.
-  And I love music.
+  まどれーぬの、ブログという名の乱文置き場です。
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
