--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ subtitle: "まどれーぬのブログです"
 email: madoreenu314@gmail.com
 name: madoreenu
 description: >
-  まどれーぬの、ブログという名の乱文置き場です。GitHub Pagesで無料ブログ運営は<a href="https://qiita.com/madoreenu/items/b47833bf785562c77819">手前味噌</a>を参考にどうぞ。
+  まどれーぬの、ブログという名の乱文置き場です。
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
